<?xml version="1.0"?>
<package format="2">
  <name>ros1_rmf_gazebo</name>
  <version>0.1.0</version>
  <description>The ros1_rmf_gazebo package</description>

  <maintainer email="roald.ong@gmail.com">ro</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>